components/header/styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

body {
    font-family: Roboto, sans-serif;
    padding: 0;
    margin: 0;
}

header {
    background-color: #1F2937;
    padding-top: 20px;
    padding-bottom: 120px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

nav {
    margin-bottom: 100px;
}

nav,
.hero {
    margin-left: auto;
    margin-right: auto;
    width: 1100px;
    display: flex;
    justify-content: space-between;
}

.hero-left-pane {
    width: 460px;
}

.header-links {
    display: flex;
    gap: 20px;
}

.header-logo {
    font-size: 24px;
    color: #F9FAF8;
    font-weight: bold;
}

ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

a,
a:visited {
    text-decoration: none;
}

.hero-detail,
.header-links a,
.sign-up-button {
    font-size: 18px;
    color: #E5E7EB;
}

.hero-main-text {
    font-size: 48px;
    font-weight: bolder;
    color: #F9FAF8;
}

.sign-up-button {
    background-color: #3882F6;
    border: none;
    padding: 8px 36px;
    border-radius: 8px;
}

button {
    cursor: pointer;
}

